force-app/main/default/objects/NEILON__Tree_Node_Configuration__c/NEILON__Tree_Node_Configuration__c.object-meta.xml
<CustomObject>
    <description>Tree Node Configuration</description>
    <label>S3-Link Tree Node Configuration</label>
    <nameField>
        <label>Tree Node Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>S3-Link Tree Node Configurations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>