force-app/main/default/objects/NEILON__Tree_Node_Configuration__c/fields/NEILON__Disabled__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If disable is checked, this node will not be rendered as one of the node in the tree.</description>
    <inlineHelpText>If disable is checked, this node will not be rendered as one of the node in the tree.</inlineHelpText>
    <label>Disabled</label>
    <type>Checkbox</type>
</CustomField>