force-app/main/default/objects/NEILON__Tree_Node_Configuration__c/fields/NEILON__Query_String__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Query_String__c</fullName>
    <description>Node query string for query type nodes. The query string is (name, value) pairs of conditions in the form Name#Vaue~N2#V2....  AND condition is assumed between each (name, value) pairs.</description>
    <inlineHelpText>Node query string for query type nodes. The query string is (name, value) pairs of conditions in the form Name#Vaue~N2#V2....  AND condition is assumed between each (name, value) pairs.</inlineHelpText>
    <label>Query String</label>
    <length>255</length>
    <type>Text</type>
</CustomField>