force-app/main/default/objects/NEILON__Tree_Node_Configuration__c/fields/NEILON__Show_this_configuration_node_in_tree__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Show_this_configuration_node_in_tree__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked shows the configuration node in the tree.</description>
    <inlineHelpText>If checked shows the configuration node in the tree.</inlineHelpText>
    <label>Show this configuration node in tree</label>
    <type>Checkbox</type>
</CustomField>