force-app/main/default/objects/NEILON__Tree_Node_Configuration__c/fields/NEILON__Type__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Type__c</fullName>
    <description>Tree node type. Can be one of 
o	&apos;NodeType_Root&apos; - the top most root node that can have static children only as defined in configuration
o	NodeType_Object - an object is displayed as tree node 
o	NodeType_GroupByRoot - group nodes inside this using group by field 
o	NodeType_Query - nodes inside this node comes from query result</description>
    <inlineHelpText>o	NodeType_Root - node that can have static children only
o	NodeType_Object - an object is displayed as tree node 
o	NodeType_GroupByRoot - group nodes inside this using group by field 
o	NodeType_Query - nodes inside this node comes from query result</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NodeType_GroupByRoot</fullName>
                <default>true</default>
                <label>NodeType_GroupByRoot</label>
            </value>
            <value>
                <fullName>NodeType_Object</fullName>
            </value>
            <value>
                <fullName>NodeType_Query</fullName>
            </value>
            <value>
                <fullName>NodeType_Root</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>